--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "content_scripts": [
       {
         "matches": ["*://ani.gamer.com.tw/*"],
-        "js": ["cover.js"],
+        "js": ["purify.min.js", "cover.js"],
         "run_at": "document_idle"
       }
     ]
